<?xml version="1.0"?>
<package format="3">
    <name>tf2_client</name>
    <version>0.0.0</version>
    <description>Configurable tf2 client wrapper using local or remote buffer.</description>
    <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>
    <license>MIT</license>
    <author email="tpetricek@gmail.com">Tomas Petricek</author>
    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
    <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
</package>
